# Problem-Solving

./: .gitignore  CMakeLists.txt
Programmers/: CMakeLists.txt
Programmers/src/lv0/basic/c/: day21.c  day22.c  day23.c  day8.c
Programmers/src/lv0/basic/java/: Day16.java  Day17.java  Day25.java  Day6.java  Day8.java
Programmers/src/lv0/basic/js/: day5.js
Programmers/src/lv0/basic/py/: day13.ipynb  day14.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  (+2 more)
Programmers/src/lv0/cpp/: pcce5.cpp  pcce6.cpp  pcce7.cpp  pcce8.cpp
Programmers/src/lv0/java/: PCCE1.java  PCCE2.java  PCCE3.java  PCCE4.java
Programmers/src/lv1/java/: Average.java  Budget.java  CaesarCipher.java  DetSqrt.java  DistantNum.java  EvenOdd.java  GCD_LCM.java  IntDesc.java  KthNumber.java  MobileNum.java  NumDivisor.java  NumPY.java  Remainder.java  ReverseNumArr.java  SecretMap.java  StringToInt.java  SumDigit.java  SumDivisor.java  SumInts.java  Watermelon.java  mobileNum.java
Programmers/src/lv1/py/: addCombination.py  addMatrix.py  addNonexistent.py  basicString.py  cardBundles.py  cola.py  collatzConjecture.py  dislikeSameNumber.py  divisibleNumbers.py  findKim.py  foodFight.py  hallOfFame.py  hashardNumber.py  innerProduct.py  insufficientAmount.py  memoryPoint.py  middleString.py  nearestSameString.py  numStrWord.py  ponkemon.py  rectangularStar.py  removeMin.py  reverseTernary.py  smallSubstring.py  smallestRectangle.py  sortString.py  strangeString.py  stringReverseSort.py  threeMusketeers.py  weaponsOfKnights.py  year2016.py  yinYang.py
(+622 files in other folders)
