cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(Programmers)

add_executable(basic_day8 src/lv0/basic/c/day8.c)
add_executable(basic_day21 src/lv0/basic/c/day21.c)
add_executable(basic_day22 src/lv0/basic/c/day22.c)
add_executable(basic_day23 src/lv0/basic/c/day23.c)
add_executable(PCCE_5 src/lv0/pcce/cpp/PCCE_5.cpp)
add_executable(PCCE_6 src/lv0/pcce/cpp/PCCE_6.cpp)
